--- a/apps/site/src/index.html
+++ b/apps/site/src/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-  <body class="mat-typography min-h-screen bg-blue-900">
+  <body class="mat-typography min-h-screen bg-sky-900">
     <mtcd-net-root></mtcd-net-root>
   </body>
 </html>
